<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="activity_shortcut_create">Term shortcut</string>
    <string name="activity_term_here_title">Term here</string>
    <string name="addshortcut_arguments_label">Arguments:</string>
    <string name="addshortcut_button_find_command">Find command</string>
    <string name="addshortcut_button_text_icon">Text icon</string>
    <string name="addshortcut_command_hint">command</string>
    <string name="addshortcut_command_window_instructions">Command window requires full path, no arguments. For other commands use Arguments window (ex: cd /sdcard).</string>
    <string name="addshortcut_example_hint">--example=\"a\"</string>
    <string name="addshortcut_make_text_icon">MAKE TEXT ICON</string>
    <string name="addshortcut_navigator_title">SELECT SHORTCUT TARGET</string>
    <string name="addshortcut_shortcut_label">Shortcut label:</string>
    <string name="addshortcut_text_icon_instructions" />
    <string name="addshortcut_title">Term shortcut</string>
    <string name="alt_sends_esc">Alt key sends ESC</string>
    <string name="alt_sends_esc_summary_off">Alt key does not send ESC.</string>
    <string name="alt_sends_esc_summary_on">Alt key sends ESC.</string>
    <string name="app_name">inrt</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_terminal">Terminal Emulator</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_window">Close window</string>
    <string name="colorvalue_icon_text_entry_hint">Enter icon text</string>
    <string name="colorvalue_label_lock_button_column">LOCK</string>
    <string name="colorvalue_letter_alpha">α</string>
    <string name="colorvalue_letter_blue">B</string>
    <string name="colorvalue_letter_green">G</string>
    <string name="colorvalue_letter_red">R</string>
    <string name="confirm_window_close_message">Close this window?</string>
    <string name="control_key_dialog_control_disabled_text">No control key set.</string>
    <string name="control_key_dialog_control_text">"CTRLKEY Space : Control-@ (NUL)
CTRLKEY A..Z : Control-A..Z
CTRLKEY 5 : Control-]
CTRLKEY 6 : Control-^
CTRLKEY 7 : Control-_
CTRLKEY 9 : F11
CTRLKEY 0 : F12"</string>
    <string name="control_key_dialog_fn_disabled_text">No function key set.</string>
    <string name="control_key_dialog_fn_text">"FNKEY 1..9 : F1-F9
FNKEY 0 : F10
FNKEY W : Up
FNKEY A : Left
FNKEY S : Down
FNKEY D : Right
FNKEY P : PageUp
FNKEY N : PageDown
FNKEY T : Tab
FNKEY L : | (pipe)
FNKEY U : _ (underscore)
FNKEY E : Control-[ (ESC)
FNKEY X : Delete
FNKEY I : Insert
FNKEY H : Home
FNKEY F : End
FNKEY . : Control-\\
"</string>
    <string name="control_key_dialog_title">Control and Function Keys</string>
    <string name="copy">Copy</string>
    <string name="copy_all">Copy all</string>
    <string name="define_roundedimageview" />
    <string name="dialog_title_actionbar_preference">Action bar behavior</string>
    <string name="dialog_title_backaction_preference">Back button behavior</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="dialog_title_cursorblink_preference">Cursor blink</string>
    <string name="dialog_title_cursorstyle_preference">Cursor style</string>
    <string name="dialog_title_fnkey_preference">Fn key</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="dialog_title_ime_preference">Input method</string>
    <string name="dialog_title_initialcommand_preference">Initial Command</string>
    <string name="dialog_title_orientation_preference">Screen orientation behavior</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>
    <string name="dialog_title_termtype_preference">Terminal type</string>
    <string name="disable_wakelock">Drop WakeLock</string>
    <string name="disable_wifilock">Drop WifiLock</string>
    <string name="edit_text">Edit text</string>
    <string name="email_transcript_chooser_title">Mail transcript using:</string>
    <string name="email_transcript_no_email_activity_found">Could not choose an email activity to send transcript.</string>
    <string name="email_transcript_subject">Transcript from Terminal Emulator for Android</string>
    <string name="enable_wakelock">Take WakeLock</string>
    <string name="enable_wifilock">Take WifiLock</string>
    <string name="error_activity_not_found_for_apk_installing">找不到安装apk的应用</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exception_notification_service_disabled">通知服务未运行，请重新启用通知权限</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fsnavigator_change_theme">Change theme</string>
    <string name="fsnavigator_no_external_storage">External storage not available</string>
    <string name="fsnavigator_optional_enter_path">Or enter path here.</string>
    <string name="fsnavigator_title">FILE SELECTOR</string>
    <string name="help">Help</string>
    <string name="help_url">http://jackpal.github.com/Android-Terminal-Emulator/help/index.html</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jdeferred">jdeferred</string>
    <string name="key_dont_show_main_activity">key_dont_show_main_activity</string>
    <string name="key_enable_accessibility_service">key_enable_accessibility_service</string>
    <string name="key_enable_accessibility_service_by_root">key_enable_accessibility_service_by_root</string>
    <string name="key_enable_floating_window">key_enable_floating_window</string>
    <string name="key_hide_logs">key_hide_logs</string>
    <string name="key_print_java_stack_trace">key_print_java_stack_trace</string>
    <string name="key_stable_mode">key_stable_mode</string>
    <string name="key_use_volume_control_running">key_use_volume_control_running</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="login_failed">Login failed</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="summary_dont_show_main_activity">打开应用后直接运行脚本</string>
    <string name="summary_enable_accessibility_service">必须要开启无障碍服务任务才能执行(保留项)</string>
    <string name="summary_enable_accessibility_service_by_root">开启后运行脚本会使用Root权限自动开启无障碍服务(保留项)</string>
    <string name="summary_enable_floating_window">必须要开启悬浮窗才能查看日志(保留项)</string>
    <string name="summary_hide_logs">不显示日志界面,在次打开本界面需要脚本支持</string>
    <string name="summary_stable_mode">开启后布局分析更稳定，但小部分脚本可能无法正常运行。重启无障碍服务生效</string>
    <string name="text_accessibility_service">无障碍服务</string>
    <string name="text_dont_show_main_activity">不显示主界面</string>
    <string name="text_enable_accessibility_service_by_root">使用Root权限自动启用服务</string>
    <string name="text_hide_logs">隐藏日志</string>
    <string name="text_script_running">脚本运行</string>
    <string name="text_stable_mode">稳定模式</string>
    <string name="text_use_accessibility_service">无障碍服务</string>
    <string name="text_use_floating_window">悬浮窗</string>
    <string name="text_use_volume_to_stop_running">音量上键停止所有脚本</string>
</resources>